<resources>
    <string name="app_name">Corinthians Quiz Game</string>
    <string name="new_game">Novo Jogo</string>
    <string name="ranking">Ranking</string>
    <string name="see_ranking">Ver Ranking</string>
    <string name="friends_ranking">Ranking dos seus amigos</string>
    <string name="share">Compartilhar</string>
    <string name="question">Pergunta:</string>
    <string name="help">Ajuda:</string>
    <string name="cheering">Torcida</string>
    <string name="coach">Tecnico</string>
    <string name="escape">Fuga</string>
    <string name="answer">Responder</string>
    <string name="next_round">Proxima Rodada</string>
    <string name="next_question">Próxima Pergunta</string>
    <string name="publish_score">Publicar Score&#160;&#160;&#160;</string>
    <string name="share_face_button">Compartilhar&#160;&#160;&#160;</string>
    <string name="score">Score:</string>
    <string name="between_round_right_message" formatted="false">Parabens, você respondeu corretamente a pergunta: %round% do Quiz com o score: %score%, faltam apenas %missing% para concluir a rodada =D</string>
    <string name="win_message" formatted="false">Parabéns, você terminou a rodada do Quiz! com a pontuação: %score%! Se gostou do jogo, por favor não se esqueça de compartilhar nas redes sociais.</string>
    <string name="fail_message" formatted="false">Infelizmente voce errou a pergunta, sua pontuação total foi de: %score%. Se gostou do jogo, por favor não se esqueça de compartilhar nas redes sociais.</string>
    <string name="using_cheering_help">A torcida te ajudou removendo randomicamente uma pergunta. Ooh!! Todo poderoso Timão!!</string>
    <string name="using_coach_help">O técnico te ajudou removendo randomicamente duas perguntas. É nóis curinthians!</string>
    <string name="using_escape_help">Você fugiu do BO! Bora para a próxima pergunta!</string>
    <string name="must_be_loged_to_display_ranking">Você precisa estar logado no facebook e com acesso à internet para mostrar o ranking com os melhores scores seu e de seus amigos</string>
    <string name="must_be_loged_to_publish_ranking">Você precisa estar logado no facebook e com acesso à internet para publicar e compartilhar o ranking com os melhores scores seu e de seus amigos</string>
    <string name="must_be_loged_to_publish">Você precisa estar logado no facebook e com acesso à internet para poder publicar a pergunta no facebook.</string>
    <string name="must_be_loged_to_enter_in_chat">Você precisa estar logado no facebook para poder participar do chat</string>
    <string name="share_hit_question_in_between_round" formatted="false"> é louco pelo Corinthians!!! =D Já conquistou %pontos% pontos no Quiz e acertou a pergunta: %question% Responda o Quiz e mostre para o mundo todo que você é um torcedor louco pelo Corinthians</string>
    <string name="share_scape_question_in_between_round" formatted="false"> é louco pelo Corinthians!!! =D Já conquistou %pontos% pontos, mas teve que escapar da seguinte pergunta: %question% Responda o Quiz e mostre para o mundo todo que você é um torcedor louco pelo Corinthians</string>
    <string name="have_shared">Você compartilhou um post via facebook</string>
    <string name="failed_to_log_through_facebook">Não foi possível logar usando sua conta do facebook. Tente alguns minutos mais tarde</string>
    <string name="have_logged_out">Logout efetuado</string>
    <string name="round_finished">Rodada finalizada!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_round">Corinthians Quiz Game</string>
    <string name="login_as_anonymous">Logar Anônimo</string>
    <string name="login_as_anonymous_message">Logando como anônimo</string>
    <string name="title_activity_between_round">BetweenRoundActivity</string>
    <string name="title_activity_fail">FailActivity</string>
    <string name="title_activity_win">WinActivity</string>
    <string name="title_ranking">Ranking</string>
    <string name="choose_round">Selecione a rodada</string>

    <!-- Chat Activity -->
    <string name="chat_timao">Chat do Timão</string>
    <string name="chat_cheering">Chat da Torcida</string>
    <string name="send">Enviar</string>
    <string name="Name">Nome</string>
    <string name="Score">Score</string>
    <string name="Menu">Opções</string>
    <string name="logout">Logout</string>
    <string name="anonymous_name">Anônimo</string>
    <string name="app_id">876336285821169</string>
    <string name="app_acess_token">876336285821169|ScJeTM2IuYDPlfp2fmJbZnPpx-A</string>
    <string name="message_welcome">Bem vindo ao chat do Corinthians</string>
    <string name="connection_error">Erro ao conectar com o servidor!</string>
    <string name="wrong_answer">Quase! Resposta Errada!</string>
    <string name="right_answer_title">Acertou a resposta!</string>
    <string name="escape_title">Escapou!</string>
    <string name="message_user_joined">%s entrou</string>
    <string name="message_user_left">%s saiu</string>
    <string name="user_action_typing">está digitando</string>

    <string name="reset_score">Limpar Score</string>
    <string name="score_has_been_reset">O Score atual foi limpo</string>

    <string name="back_to_main">Menu Principal</string>
    <plurals name="message_participants">
        <item quantity="one">Há %d participante</item>
        <item quantity="other">Há %d participantes</item>
    </plurals>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login_banner_ad_unit_id" translatable="false">ca-app-pub-9505366133372164/9128631138</string>
    <string name="main_banner_ad_unit_id" translatable="false">ca-app-pub-9505366133372164/1326162737</string>
    <string name="round_banner_ad_unit_id" translatable="false">ca-app-pub-9505366133372164/2802895931</string>
    <string name="chat_banner_ad_unit_id" translatable="false">ca-app-pub-9505366133372164/7233095531</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-9505366133372164/6660273134</string>
</resources>
